WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121136
Fix some indentation in Interpreter.cpp
https://bugs.webkit.org/show_bug.cgi?id=121136
Summary
Fix some indentation in Interpreter.cpp
Mark Lam
Reported
2013-09-10 17:27:14 PDT
This is purely cosmetic to fix some indentation mess up that was not caught in my last StackIterator patch.
Attachments
the patch.
(1.70 KB, patch)
2013-09-10 17:29 PDT
,
Mark Lam
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2013-09-10 17:29:36 PDT
Created
attachment 211267
[details]
the patch.
Mark Lam
Comment 2
2013-09-10 17:34:52 PDT
Thanks for the review. Landed in
r155494
: <
http://trac.webkit.org/r155494
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug