Fix some indentation in Interpreter.cpp. https://bugs.webkit.org/show_bug.cgi?id=121136.

Reviewed by Darin Adler.

* interpreter/Interpreter.cpp:
(JSC::UnwindFunctor::operator()):



Canonical link: https://commits.webkit.org/139057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155494 268f45cc-cd09-0410-ab3c-d52691b4dbfc